--- a/assets/components/myjournal/css/index.css
+++ b/assets/components/myjournal/css/index.css
@@ -312,3 +312,30 @@
 .browser-main-view .loading-indicator { 
     background-position: center 85px;
 }
+
+/* Buttons */
+.myjournal .x-btn.green {
+    background:#9fcb57;
+    background:-moz-linear-gradient(center bottom,#9fcb57 0%,#d7e9a4 100%) repeat scroll 0 0 transparent;
+    background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#d7e9a4),color-stop(100%,#9fcb57));
+    background:-webkit-linear-gradient(center bottom,#9fcb57 0%,#d7e9a4 100%);
+    background:-o-linear-gradient(center bottom,#9fcb57 0%,#d7e9a4 100%);
+    background:-ms-linear-gradient(center bottom,#9fcb57 0%,#d7e9a4 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#d7e9a4,endColorstr=#9fcb57,GradientType=0);
+    background:linear-gradient(center bottom,#9fcb57 0%,#d7e9a4 100%);
+    border:1px solid #85a948;	
+}
+.myjournal .x-btn.green button{
+    color:#556f14 !important;
+    text-shadow:0 1px 0 #d7e9a4;
+}
+.myjournal .x-btn.green:hover {
+    background:#9fcb57;
+    background:-moz-linear-gradient(center bottom,#9fcb57 0%,#e6efd1 100%) repeat scroll 0 0 transparent;
+    background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#e6efd1),color-stop(100%,#9fcb57));
+    background:-webkit-linear-gradient(center bottom,#9fcb57 0%,#e6efd1 100%);
+    background:-o-linear-gradient(center bottom,#9fcb57 0%,#e6efd1 100%);
+    background:-ms-linear-gradient(center bottom,#9fcb57 0%,#e6efd1 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#e6efd1,endColorstr=#9fcb57,GradientType=0);
+    background:linear-gradient(center bottom,#9fcb57 0%,#e6efd1 100%);
+}
